--- a/src/components/Shared/Navbar/Navbar.css
+++ b/src/components/Shared/Navbar/Navbar.css
@@ -17,8 +17,11 @@
     width: 45px;
     border-radius: 50%;
 }
-.btn-login{
+.custom-btn{
     background-color: #C19977;
+    background-color: #0E1317;
+    color: white;
+    border: 2px solid #C19977;
     padding: 5px 15px;
-    font-size: 20px;
+    font-size: 18px;
 }
