responsive footer and some change

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,4 +7,8 @@
 }
 .chef{
     margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
