--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -1,5 +1,5 @@
 .banner-container{
-    background-image: linear-gradient(to right, #1c1c1c , rgba(193, 153, 119, 50%)), url(https://images.unsplash.com/photo-1600565193348-f74bd3c7ccdf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+    background-image: linear-gradient(to right, #a78686 , rgba(193, 153, 119, 50%)), url(https://images.unsplash.com/photo-1600565193348-f74bd3c7ccdf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
     height: 600px;
     background-repeat: no-repeat;
     background-size: cover;
