--- a/src/components/ChefCard/ChefCard.css
+++ b/src/components/ChefCard/ChefCard.css
@@ -1,3 +1,10 @@
 .chef-picture{
     height: 400px;
 }
+
+@media only screen and (max-width: 576px) {
+    .chef-card {
+        margin-bottom: 20px;
+    }
+
+}
