login page error, private route set and someting etc.

--- a/src/components/Shared/Navbar/Navbar.css
+++ b/src/components/Shared/Navbar/Navbar.css
@@ -27,6 +27,40 @@
     border-radius: 50%;
 }
 
+.tooltip-name {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.tooltipText {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    border: 1px solid #C19977;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    right: 110%;
+}
+.tooltip-name .tooltipText::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent transparent #C19977;
+  }
+  .tooltip-name:hover .tooltipText {
+    visibility: visible;
+  }
+
 .custom-btn {
     background-color: #C19977;
     background-color: #0E1317;
