create a readme file

--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -8,8 +8,8 @@
     color: white;
     font-size: 30px;
 }
-.title{
-    color: white;
+.section-title{
+    color: #C19977;
     font-size: 70px;
     text-align: center;
 }
