--- a/src/components/Recipes/Recipes.css
+++ b/src/components/Recipes/Recipes.css
@@ -1,7 +1,3 @@
-.chef-image{
-    width: 200px;
-    border-radius: 20px;
-}
 .single-chef-container{
     background-image: linear-gradient(to right, #424242 , rgba(193, 153, 119, 50%), #424242), url(https://images.unsplash.com/photo-1577106263724-2c8e03bfe9cf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
     height: 600px;
@@ -9,11 +5,12 @@
     background-size: cover;
 }
 .chef-container{
-    width: 500px;
+    width: 650px;
 }
-.chef-info h1{
-    font-size: 60px;
+.name{
+    font-size: 40px;
     font-weight: 600;
+    color: white;
 }
 .chef-info h5{
     font-size: 30px;
