--- a/src/components/Shared/Navbar/Navbar.css
+++ b/src/components/Shared/Navbar/Navbar.css
@@ -12,7 +12,14 @@
 .logo {
     color: #C19977;
 }
-
+.logo a{
+     text-decoration: none;
+     color: white;
+}
+.logo a:hover{
+    text-decoration: none;
+    color: white;
+}
 .page {
     font-size: 22px;
 }
@@ -75,12 +82,17 @@
     display: flex;
     gap: 15px;
     flex-direction: column;
+    align-items: center;
     top: 100px;
     background-color: black;
     left: 0;
     padding: 20px;
     animation-name: navbarIn;
     animation-duration: .5s;
+}
+.phone-page a{
+    text-decoration: none;
+    color: #C19977;
 }
 
 @keyframes navbarIn {
