currection some mistake

--- a/src/components/ChefContainer/ChefContainer.css
+++ b/src/components/ChefContainer/ChefContainer.css
@@ -1,3 +1,14 @@
-.country-buttons a{
+.country-buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.country-buttons a {
     text-decoration: none;
+
+}
+@media only screen and (max-width: 576px) {
+    .country-buttons{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
