--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,5 +1,5 @@
 .main-container{
-    background-color: #0E1317;
+    /* background-color: #0E1317; */
     max-width: 1440px;
     margin: 0 auto;
 }
