--- a/src/components/MyBlog/MyBlog.css
+++ b/src/components/MyBlog/MyBlog.css
@@ -2,7 +2,7 @@
     border: 3px solid #C19977;
     margin-bottom: 30px;
     min-height: 150px;
-    color: white;
+    color: #C19977;
     padding: 20px;
 }
 .blog-container{
@@ -14,7 +14,7 @@
     margin-bottom: 50px;
 }
 .blog h3{
-    color: white;
+    color: #C19977;
 }
 .highlight{
     color: #C19977;
